--- a/gymcoin/templates/layout.html
+++ b/gymcoin/templates/layout.html
@@ -10,9 +10,9 @@
   <meta name="author" content="">
 
   {% if title %}
-    <title>GymCoin Cryptocurrency - {{ title }} </title>
+    <title>Decentralized Currency - {{ title }} </title>
   {% else %}
-    <title>GymCoin Cryptocurrency</title>
+    <title>Decentralized Currency</title>
   {% endif %}
 
   <!-- Custom fonts for this template--> 
@@ -38,7 +38,7 @@
 <body id="page-top">
 
   <nav class="navbar navbar-expand navbar-dark bg-dark static-top">
-    <a class="navbar-brand" href="{{ url_for('home') }}">GymCoin</a>
+    <a class="navbar-brand" href="{{ url_for('home') }}">Decentralized Currencyn</a>
     <button class="btn btn-link btn-sm text-white order-1 order-sm-0" id="sidebarToggle" href="#">
       <i class="fas fa-bars"></i>
     </button>
@@ -113,7 +113,7 @@
       <li class="nav-item">
         <a class="nav-link" href="{{ url_for('purchase') }}">
         <i class="fas fa-store"></i>
-        <span>Buy GymCoin</span></a>
+        <span>Buy Coin</span></a>
       </li>
       {% if current_user.is_authenticated %}
         <li class="nav-item">
@@ -160,9 +160,9 @@
       <footer class="sticky-footer">
         <div class="container my-auto">
           <div class="copyright text-center my-auto">
-            <span>Copyright © GymCoin 2019</span>
+            <span>Copyright © Decentralized Currency 2023</span>
             <br><br>
-            <span>Created by @nang149</span>
+            <span>Created by Harrison Muraya</span>
           </div>
         </div>
       </footer>
