--- a/gymcoin/templates/login.html
+++ b/gymcoin/templates/login.html
@@ -9,7 +9,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Gym Coin - Login</title>
+  <title>Decentralized Currency - Login</title>
 
       <!-- Custom fonts for this template--> 
   <link href="{{ url_for('static', filename = 'vendor/fontawesome-free/css/all.min.css') }}" rel="stylesheet" type="text/css">
