--- a/gymcoin/templates/register.html
+++ b/gymcoin/templates/register.html
@@ -9,7 +9,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>GymCoin - Register</title>
+  <title>Decentralized Currency - Register</title>
 
     <!-- Custom fonts for this template--> 
   <link href="{{ url_for('static', filename = 'vendor/fontawesome-free/css/all.min.css') }}" rel="stylesheet" type="text/css">
